modified:   src/context/ThemeContext.js 	modified:   src/css/style.css 	modified:   src/css/style.css.map 	new file:   src/icons/brand-logo-bg.png 	modified:   src/icons/brand-logo.png 	modified:   src/icons/logo.png 	new file:   src/images/deana.png 	modified:   src/images/logo.png 	new file:   src/images/logo2.png 	modified:   src/jsx/components/Dashboard/Home.js 	modified:   src/jsx/components/Dashboard/Portofolio.js 	modified:   src/jsx/layouts/Footer.js 	modified:   src/jsx/layouts/nav/NavHader.js 	modified:   src/jsx/layouts/nav/SideBar.js 	modified:   src/jsx/pages/Login.js 	modified:   src/scss/abstracts/_bs-custom.scss 	modified:   src/scss/abstracts/_variable.scss 	modified:   src/scss/pages/_page-auth.scss

--- a/src/scss/abstracts/_bs-custom.scss
+++ b/src/scss/abstracts/_bs-custom.scss
@@ -99,8 +99,8 @@ $colors: map-merge((
 
 
   
-$primary  : #eb8153 !default;
-$secondary: #6418C3 !default;
+$primary  : #3FE2B7 !default;
+$secondary: #22CA9d !default;
 $success  : #68CF29 !default;
 $info     : #51A6F5 !default;
 $warning  : #FFAB2D !default;
