--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -107,7 +107,7 @@ $color_pallate_5: #c62828;
 $color_pallate_6: #283593;
 $color_pallate_7: #7356f1;
 $color_pallate_8: #5bcfc5;
-$color_pallate_9: #00838f;
+$color_pallate_9: #3FE2B7;
 $color_pallate_10: #ff8f16;
 $color_pallate_11: #6673fd;
 $color_pallate_12: #558b2f;
