--- a/src/scss/pages/_page-auth.scss
+++ b/src/scss/pages/_page-auth.scss
@@ -107,7 +107,7 @@
     position:relative;
     z-index:1;
     .login-wrapper{
-        background:$dark-card;   
+        background:$gray-100;   
         max-width:1170px;
         margin-left:auto;
         margin-right:auto;
